--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -435,7 +435,7 @@
 	"On": "开启",
 	"Only": "仅",
 	"Only alphanumeric characters and hyphens are allowed in the command string.": "命令字符串中只允许使用英文字母，数字 (0-9) 以及连字符 (-)。",
-	"Only the first {{count}} files will be processed.": "只有前 {{count}} 个文件会被处理。",
+	"Only the first {{count}} files will be processed._other": "",
 	"Oops! Hold tight! Your files are still in the processing oven. We're cooking them up to perfection. Please be patient and we'll let you know once they're ready.": "糟糕！请稍等！您的文件还在处理中。我们正在努力让它们达到最佳效果。请耐心等待，准备好后我们会通知您。",
 	"Oops! Looks like the URL is invalid. Please double-check and try again.": "糟糕！此链接似乎为无效链接。请检查后重试。",
 	"Oops! There was an error in the previous response. Please try again or contact admin.": "糟糕！之前的回复出现了错误。请重试或联系管理员。",
