--- a/src/lib/i18n/locales/ms-MY/translation.json
+++ b/src/lib/i18n/locales/ms-MY/translation.json
@@ -9,7 +9,7 @@
 	"{{modelName}} is thinking...": "{{modelName}} sedang berfikir...",
 	"{{user}}'s Chats": "Perbualan {{user}}",
 	"{{webUIName}} Backend Required": "{{webUIName}} Backend diperlukan",
-	"A task model is used when performing tasks such as generating titles for chats and web search queries": "Model tugas digunakan semasa melaksanakan tugas seperti menjana tajuk untuk perbualan dan pertanyaan carian web.,
+	"A task model is used when performing tasks such as generating titles for chats and web search queries": "Model tugas digunakan semasa melaksanakan tugas seperti menjana tajuk untuk perbualan dan pertanyaan carian web.",
 	"a user": "seorang pengguna",
 	"About": "Mengenai",
 	"Account": "Akaun",
@@ -155,7 +155,7 @@
 	"Database": "Pangkalan Data",
 	"December": "Disember",
 	"Default": "Lalai",
-	"Default (Automatic1111)": "Lalai (Automatic1111)"",
+	"Default (Automatic1111)": "Lalai (Automatic1111)",
 	"Default (SentenceTransformers)": "Lalai (SentenceTransformers)",
 	"Default Model": "Model Lalai",
 	"Default model updated": "Model lalai dikemas kini",
@@ -206,7 +206,7 @@
 	"Download canceled": "Muat Turun dibatalkan",
 	"Download Database": "Muat turun Pangkalan Data",
 	"Drop any files here to add to the conversation": "Letakkan mana-mana fail di sini untuk ditambahkan pada perbualan",
-	"e.g. '30s','10m'. Valid time units are 's', 'm', 'h'.": "cth '30s','10m'. Unit masa yang sah ialah 's', 'm', 'h'.": "",
+	"e.g. '30s','10m'. Valid time units are 's', 'm', 'h'.": "cth '30s','10m'. Unit masa yang sah ialah 's', 'm', 'h'.",
 	"Edit": "Edit",
 	"Edit Doc": "Edit Dokumen",
 	"Edit Memory": "Edit Memori",
@@ -215,7 +215,7 @@
 	"Embedding Batch Size": "Membenamkan Saiz Kelompok",
 	"Embedding Model": "Model Benamkan",
 	"Embedding Model Engine": "Enjin Model Benamkan",
-	"Embedding model set to \"{{embedding_model}}\"": "Model Benamkan ditetapkan kepada \"{{ embedding_model }}\ "",
+	"Embedding model set to \"{{embedding_model}}\"": "Model Benamkan ditetapkan kepada \"{{ embedding_model }}\"",
 	"Enable Chat History": "Benarkan Sejarah Perbualan",
 	"Enable Community Sharing": "Benarkan Perkongsian Komunity",
 	"Enable New Sign Ups": "Benarkan Pendaftaran Baharu",
@@ -601,7 +601,7 @@
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Ini akan memastikan bahawa perbualan berharga anda disimpan dengan selamat ke pangkalan data 'backend' anda. Terima kasih!",
 	"This is an experimental feature, it may not function as expected and is subject to change at any time.": "ni adalah ciri percubaan, ia mungkin tidak berfungsi seperti yang diharapkan dan tertakluk kepada perubahan pada bila-bila masa.",
 	"This setting does not sync across browsers or devices.": "Tetapan ini tidak menyegerak merentas pelayar web atau peranti.",
-	"This will delete": "Ini akan memadam"",
+	"This will delete": "Ini akan memadam",
 	"Thorough explanation": "Penjelasan menyeluruh",
 	"Tika": "Tika",
 	"Tika Server URL required.": "URL Pelayan Tika diperlukan.",
@@ -627,7 +627,7 @@
 	"Tool deleted successfully": "Alat berjaya dipadamkan",
 	"Tool imported successfully": "Alat berjaya diimport",
 	"Tool updated successfully": "Alat berjaya dikemas kini",
-	"Toolkit Description (e.g. A toolkit for performing various operations)": "Perihalan Kit Alatan (cth. Kit alatan untuk melaksanakan pelbagai operasi)"",
+	"Toolkit Description (e.g. A toolkit for performing various operations)": "Perihalan Kit Alatan (cth. Kit alatan untuk melaksanakan pelbagai operasi)",
 	"Toolkit ID (e.g. my_toolkit)": "ID Kit Alatan (cth my_toolkit)",
 	"Toolkit Name (e.g. My ToolKit)": "Nama Kit Alatan (cth My ToolKit)",
 	"Tools": "Alatan",
